--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -114,26 +114,24 @@ body {
 
 /* Robust Print Styles */
 @media print {
-  /* Hide everything by default */
-  body > #app-wrapper {
-    display: none !important;
+  body * {
+    visibility: hidden;
+  }
+  #resume-print-mount, #resume-print-mount * {
+    visibility: visible;
+  }
+  #resume-print-mount {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    border: none;
+    box-shadow: none;
   }
   
-  /* Only show the dedicated print component */
-  body > #resume-print-mount {
-    display: block !important;
-  }
-
-  /* Ensure the print component takes up the whole page */
-  #resume-print-mount, #resume-print-mount > div {
-    margin: 0 !important;
-    padding: 0 !important;
-    width: 100% !important;
-    height: 100% !important;
-    box-shadow: none !important;
-    border: none !important;
-  }
-
   @page {
     size: A4;
     margin: 1cm;
