--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -115,18 +115,17 @@ body {
 
 /* Robust Print Styles */
 @media print {
-  body * {
-    visibility: hidden;
+  body > *:not(#resume-print-mount) {
+    display: none !important;
   }
-  #resume-print-mount, #resume-print-mount * {
-    visibility: visible;
-  }
+
   #resume-print-mount {
+    display: block !important;
     position: absolute;
-    left: 0;
     top: 0;
+    left: 0;
     width: 100%;
-    height: 100%;
+    height: auto;
     margin: 0;
     padding: 0;
     border: none;
